--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
@@ -21,8 +21,8 @@
 
     <p-messages [(value)]="msgs"></p-messages>
 
-    <p-table [columns]="columnasAdjuntos" [value]="rows" [(selection)]="seleccionDevolucion" [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable1" [rows]="nRowsTable1" selectionMode="single" showCurrentPageReport="true"
-      currentPageReportTemplate="Page {currentPage} of {totalPages}">
+    <p-table [columns]="columnasAdjuntos" [value]="rows" [(selection)]="seleccionDevolucion" [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable1" 
+    [(rows)]="nRowsTable1" [(first)]="pageTable1" selectionMode="single">
 
       <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
@@ -79,10 +79,6 @@
 
           </td>
         </tr>
-      </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <div style="padding: 100%">
-        </div>
       </ng-template>
 
     </p-table>
