--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
@@ -1,4 +1,4 @@
-
+<p-checkbox name="groupname" id="pp" [(ngModel)]="enableDelete" binary="true" [hidden]="true"></p-checkbox>
 <div class="ui-fluid">
   <p-toast position="top-center"></p-toast>
   <p-fieldset legend="{{ 'CUMCO012.titulo' | translate }}">
@@ -9,9 +9,9 @@
           <div class="ui-g-12">
               <div class="ui-inputgroup">
                   <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-                  <p-autoComplete [(ngModel)]="textAutoComlpeteOrganismoConfigurar" [suggestions]="suggestionsAutoCompleteOrganismoConfigurar" (completeMethod)="search($event)"
-                  (onSelect)="getTableInfo()"[dropdown]="true" [forceSelection]="true" [required]="true" placeholder="{{ 'CUMCO012.FILTROS.filtroOrganizmoPlaceHolder' | translate }}"></p-autoComplete>
-                  <p-button icon="pi pi-times" (click) ="onClicBorrarAutoComplete()"></p-button>
+                  <p-autoComplete [(ngModel)]="textAutoComlpeteOrganismoConfigurar" [suggestions]="suggestionsAutoCompleteOrganismoConfigurar" (completeMethod)="search($event)" 
+                  (onSelect)="getTableInfo()"[dropdown]="true" field="nombreCodigoGuion" [forceSelection]="true" [required]="true" placeholder="{{ 'CUMCO012.FILTROS.filtroOrganizmoPlaceHolder' | translate }}"></p-autoComplete>
+                  <p-button icon="pi pi-times" (click)="onClicBorrarAutoComplete()"></p-button>
               </div>
           </div>
       </div>
@@ -22,7 +22,7 @@
           <p-messages [(value)]="msgs"></p-messages>
           <!-- Start Table -->
           <p-table [columns]="cols" [value]="rows"
-          [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]"
+          [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1" [rowsPerPageOptions]="nRowsOptionsTable1"
           selectionMode="single" [(selection)]="selectedRow">
           
           <!-- Table Column Width -->
@@ -38,9 +38,9 @@
                   <div class="ui-helper-clearfix menu-sup-grid">
                       <!-- Buttons -->
                       <div class="button-sup-grid">
-                          <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
-                          <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
-                          <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" [disabled]="!this.textAutoComlpeteOrganismoConfigurar" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" [disabled]="!this.textAutoComlpeteOrganismoConfigurar" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" [disabled]="!this.textAutoComlpeteOrganismoConfigurar" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
                       </div>
                   </div>
               </ng-template>
@@ -67,13 +67,13 @@
 
                                       <ng-template pTemplate="input" >
 
-                                         <input type="text" [(ngModel)]="row[col.field]" [maxlength]="100" [disabled]="row.state !== 'new'">
+                                         <input type="text" [(ngModel)]="row.nombreRecorrido" [maxlength]="100" (focusout)="edited(rowIndex)">
 
                                       </ng-template>
 
                                       <ng-template pTemplate="output">
 
-                                          {{row[col.field]}}
+                                          {{row.nombreRecorrido}}
 
                                       </ng-template>
 
@@ -82,19 +82,19 @@
                               <div *ngSwitchCase="2">
                                 <div class="ui-g">
                                     <div class="ui-g-12">
-                                      <p-calendar  [timeOnly]="true" [(ngModel)]="row[col.field]" dataType="string" [disabled]="row.state !== 'new' || row.idIndex !== 0" (onClose)="validarHora(rowIndex)" (onFocus)="guardarHora(rowIndex)"></p-calendar>
+                                      <p-calendar  [timeOnly]="true" [(ngModel)]="row.horaInicio" dataType="string" [disabled]="rowIndex !== 0" (onFocus)="guardarHora(rowIndex)" (focusout)="validarHora(rowIndex)" ></p-calendar>
                                     </div>
                                 </div>
                               </div>
                               <div *ngSwitchCase="3">
                                 <div class="ui-g">
                                     <div class="ui-g-12">
-                                      <p-calendar  [timeOnly]="true" [(ngModel)]="row[col.field]" dataType="string" [disabled]="row.state !== 'new' || rowIndex !== rows.length - 1" (onFocus)="guardarHora(rowIndex)" (onClose)="validarHora(rowIndex)"></p-calendar>
+                                      <p-calendar  [timeOnly]="true" [(ngModel)]="row.horaFin" dataType="string"  (focusout)="modificarHora(rowIndex)"></p-calendar>
                                     </div>
                                 </div>
                               </div>
                               <div *ngSwitchCase="4" style="text-align: center">
-                                <p-checkbox name="groupname" [(ngModel)]="row[col.field]" binary="true" (onChange)="edited(rowIndex)"></p-checkbox>
+                                <p-checkbox name="groupname" [(ngModel)]="row.activo" binary="true" (ngModelChange)="row.activo = $event ? 1 : 0" (onChange)="edited(rowIndex)"></p-checkbox>
                               </div>
 
                           </div>
