--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.html
@@ -5,7 +5,10 @@
     <p-messages [(value)]="msgs"></p-messages>
 
     <!-- Start Table -->
-    <p-table #dt [columns]="cols" [value]="rows" [paginator]="true" [rows]="nRowsTable1" [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectedRows">
+    <p-table #dt [columns]="cols" [value]="rows" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1" 
+    [totalRecords]="rows.length" [loading]="loading"
+    [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectedRows">
+    <!-- [lazy]="true" [loading]="loading" [totalRecords]="rows.length" (onLazyLoad)="loadCustomers($event)"  -->
 
       <!-- Table Caption -->
       <ng-template pTemplate="caption">
