--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco013/cumco013.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco013/cumco013.component.html
@@ -314,6 +314,20 @@
                         <div *ngSwitchCase="1">
                           <p-cellEditor>
                               <ng-template pTemplate="input">
+                                  <input type="text" [(ngModel)]="row.codigo" [maxlength]="10"
+                                      [style]="{'width':'100%', 'height':'100%'}"
+                                      [disabled]="row.state==='delete' "
+                                      (focusout)="editedTable4()" (keydown.enter)="editedTable4()">
+                              </ng-template>
+                              <ng-template pTemplate="output">
+                                  {{row.codigo}}
+                              </ng-template>
+                          </p-cellEditor>
+                      </div>
+
+                        <div *ngSwitchCase="2">
+                          <p-cellEditor>
+                              <ng-template pTemplate="input">
                                   <input type="text" [(ngModel)]="row.descripcion" [maxlength]="100"
                                       [style]="{'width':'100%', 'height':'100%'}"
                                       [disabled]="row.state==='delete' "
@@ -326,7 +340,7 @@
                       </div>
 
 
-                      <div *ngSwitchCase="2" style="text-align: center">
+                      <div *ngSwitchCase="3" style="text-align: center">
                         <p-checkbox name="groupname" [(ngModel)]="row.activo" [binary]="true"
                           (onChange)="editedTable4(rowIndex)" [disabled]="row.state === 'delete'"
                           (ngModelChange)="row.activo = $event ? 1 : 0"></p-checkbox>
